--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ImageMapper",
-  "displayName": "ImageMapper"
+  "name": "react-native-image-mapper",
+  "displayName": "react-native-image-mapper"
 }
